# ontopint

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-test.yml
src/ontopint/: __init__.py
tests/: 010_api_test.py  020_deserialization_test.py  030_serialization_test.py  040_roundtrip_test.py  common.py  deserialization_test.py  test_010_api.py
tests/data/: test_data_custom_keys.jsonld  test_data_default_keys.jsonld
